force-app/main/default/objects/Product2/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <label>Expense Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>97</fullName>
                <label>Advertising</label>
            </value>
            <value>
                <fullName>98</fullName>
                <label>Bank Charges</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Commissions &amp; fees</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>Disposal Fees</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Dues &amp; Subscriptions</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Insurance</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>Insurance - Liability</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Legal &amp; Professional Fees</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Meals and Entertainment</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Office Expenses</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>Promotional</label>
            </value>
            <value>
                <fullName>124</fullName>
                <default>true</default>
                <label>Purchases</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>Rent or Lease</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>Repair &amp; Maintenance</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>Stationery &amp; Printing</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>Supplies</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>Taxes &amp; Licenses</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>Tools</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>Travel</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>Travel Meals</label>
            </value>
            <value>
                <fullName>134</fullName>
                <label>Uncategorized Expense</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>Utilities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>