force-app/main/default/objects/Product2/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <label>Income Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>184</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>209</fullName>
                <label>Services</label>
            </value>
            <value>
                <fullName>211</fullName>
                <label>Billable Expense Income</label>
            </value>
            <value>
                <fullName>181</fullName>
                <label>Discounts</label>
            </value>
            <value>
                <fullName>182</fullName>
                <label>Gross Receipts</label>
            </value>
            <value>
                <fullName>183</fullName>
                <label>Refunds-Allowances</label>
            </value>
            <value>
                <fullName>216</fullName>
                <label>Sales of Product Income</label>
            </value>
            <value>
                <fullName>212</fullName>
                <label>Uncategorized Income</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>