force-app/main/default/objects/Product2/fields/Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vendor__c</fullName>
    <label>Preferred Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>