force-app/main/default/objects/Product2/fields/Purchase_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Product_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I purchase this product/service from a vendor.</inlineHelpText>
    <label>Purchase Product/Service</label>
    <type>Checkbox</type>
</CustomField>