force-app/main/default/objects/Product2/fields/QBO_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Quick Books Online ID. If this field is filled out, we&apos;ve stored in QBO.</inlineHelpText>
    <label>QBO_Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>