force-app/main/default/objects/Product2/fields/Sell_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Sell_Product_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I sell this product/service to my customers.</inlineHelpText>
    <label>Sell Product/Service</label>
    <type>Checkbox</type>
</CustomField>