force-app/main/default/objects/Product2/validationRules/Expense_Account_not_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Account_not_None</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				Purchase_Product_Service__c = true,
				ISPICKVAL(Expense_Account__c, &apos;&apos;),
				false  
)</errorConditionFormula>
    <errorMessage>If Purchase Product/Service is checked, you must specify an Expense Account</errorMessage>
</ValidationRule>