force-app/main/default/objects/Product2/validationRules/Income_Account_not_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Income_Account_not_None</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				Sell_Product_Service__c = true,
				ISPICKVAL(Income_Account__c, &apos;&apos;),
				false  
)</errorConditionFormula>
    <errorMessage>If Sell Product/Service is checked, you must specify an Income Account</errorMessage>
</ValidationRule>