force-app/main/default/objects/Product2/validationRules/Special_Characters_in_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Characters_in_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    OR(
							 CONTAINS(Name, &apos;:&apos;), 
							 CONTAINS(Name, &quot;&apos;&quot;),
								CONTAINS(Name, &apos;&quot;&apos;)
				),
			 TRUE,
				FALSE
)</errorConditionFormula>
    <errorMessage>Name can not contain special characters such as : &apos; &quot;</errorMessage>
</ValidationRule>